Atualiza frontend com login e registro estilizados

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Finance Tracker</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Welcome to Finance Tracker 💰</h1>
-  <div class="buttons">
-    <a href="register.html">Register</a>
-    <a href="login.html">Login</a>
+  <div class="container">
+    <h1>Welcome to <span>Finance Tracker 💰</span></h1>
+    <p>Manage your finances easily and keep track of your spending!</p>
+    <div class="buttons">
+      <a class="btn register" href="register.html">Register</a>
+      <a class="btn login" href="login.html">Login</a>
+    </div>
   </div>
 </body>
 </html>
+
