--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,16 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Login - Finance Tracker</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h2>Login</h2>
-  <form id="loginForm">
-    <input type="email" placeholder="Email" id="email" required>
-    <input type="password" placeholder="Password" id="password" required>
-    <button type="submit">Login</button>
-  </form>
+  <div class="container">
+    <h2>Login</h2>
+    <form id="loginForm" class="form">
+      <input type="email" placeholder="Email" id="email" required class="input-field">
+      <input type="password" placeholder="Password" id="password" required class="input-field">
+      <button type="submit" class="btn login">Login</button>
+    </form>
+    <p>Don't have an account? <a href="register.html" class="link">Register here</a></p>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
+
