--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,17 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register</title>
+  <title>Register - Finance Tracker</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h2>Create an account</h2>
-  <form id="registerForm">
-    <input type="text" placeholder="Name" id="name" required>
-    <input type="email" placeholder="Email" id="email" required>
-    <input type="password" placeholder="Password" id="password" required>
-    <button type="submit">Register</button>
-  </form>
+  <div class="container">
+    <h2>Create an Account</h2>
+    <form id="registerForm" class="form">
+      <input type="text" placeholder="Name" id="name" required class="input-field">
+      <input type="email" placeholder="Email" id="email" required class="input-field">
+      <input type="password" placeholder="Password" id="password" required class="input-field">
+      <button type="submit" class="btn register">Register</button>
+    </form>
+    <p>Already have an account? <a href="login.html" class="link">Login here</a></p>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
+
