--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,22 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - Finance Tracker</title>
+  <title>Finance Tracker - Login</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="container">
-    <h2>Login</h2>
-    <form id="loginForm" class="form">
-      <input type="email" placeholder="Email" id="email" required class="input-field">
-      <input type="password" placeholder="Password" id="password" required class="input-field">
-      <button type="submit" class="btn login">Login</button>
-    </form>
-    <p>Don't have an account? <a href="register.html" class="link">Register here</a></p>
-  </div>
-
+  <form id="loginForm">
+    <h1>Login</h1>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button type="submit">Login</button>
+    <p>Não tem conta? <a href="register.html">Registrar</a></p>
+  </form>
   <script src="script.js"></script>
 </body>
 </html>
+
 
