Atualização completa: visual masculino profissional + dashboard funcional

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="login-card">
       <h1>Finance Tracker</h1>
-      <p class="subtitle">Controle suas finanças de forma simples e rápida</p>
+      <p class="subtitle">Controle suas finanças de forma rápida e elegante</p>
       <form id="loginForm">
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="password" placeholder="Senha" required>
