--- a/frontend/register.html
+++ b/frontend/register.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Finance Tracker - Registro</title>
+  <title>Finance Tracker - Cadastro</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
-    <div class="login-card">
-      <h1>Registrar-se</h1>
-      <form id="registerForm">
-        <input type="text" id="name" placeholder="Nome" required>
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="password" id="password" placeholder="Senha" required>
-        <button type="submit">Registrar</button>
-      </form>
-      <p class="register-link">
-        Já tem conta? <a href="index.html">Entrar</a>
-      </p>
-    </div>
+    <h1>Cadastro</h1>
+    <form id="registerForm">
+      <input type="text" id="name" placeholder="Digite seu nome" required>
+      <input type="email" id="email" placeholder="Digite seu e-mail" required>
+      <input type="password" id="password" placeholder="Digite sua senha" required>
+      <button type="submit">Cadastrar</button>
+    </form>
+    <a href="index.html">Já tem conta? Faça login</a>
   </div>
   <script src="script.js"></script>
 </body>
