--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,22 +8,16 @@
 </head>
 <body>
   <div class="container">
-    <div class="login-card">
-      <h1>Finance Tracker</h1>
-      <p class="subtitle">Controle suas finanças de forma rápida e elegante</p>
-      <form id="loginForm">
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="password" id="password" placeholder="Senha" required>
-        <button type="submit">Entrar</button>
-      </form>
-      <p class="register-link">
-        Não tem conta? <a href="register.html">Registre-se</a>
-      </p>
-    </div>
+    <h1>Login</h1>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Digite seu e-mail" required>
+      <input type="password" id="password" placeholder="Digite sua senha" required>
+      <button type="submit">Entrar</button>
+    </form>
+    <a href="register.html">Não tem conta? Cadastre-se</a>
   </div>
   <script src="script.js"></script>
 </body>
 </html>
-
 
 
