--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,14 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form id="loginForm">
+  <div class="container">
     <h1>Login</h1>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <button type="submit">Login</button>
-    <p>Não tem conta? <a href="register.html">Registrar</a></p>
-  </form>
-  <script src="script.js"></script>
+    <form id="loginForm">
+      <input type="email" id="email" placeholder="Digite seu e-mail" required>
+      <input type="password" id="password" placeholder="Digite sua senha" required>
+      <button type="submit">Entrar</button>
+    </form>
+    <a href="register.html">Não tem conta? Cadastre-se</a>
+  </div>
 </body>
 </html>
 
